--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -5,7 +5,7 @@
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
     <div class="logo" (click)="goToHome()">ngx-<span>admin</span></div>
   </div>
-  <ngx-theme-switcher></ngx-theme-switcher>
+  <ngx-theme-switcher [hidden]="true"></ngx-theme-switcher>
   <ngx-layout-direction-switcher></ngx-layout-direction-switcher>
 </div>
 
