--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -3,10 +3,10 @@
      [class.right]="position === 'inverse'">
   <div class="logo-containter">
     <a (click)="toggleSidebar()" href="#" class="navigation"><i class="nb-menu"></i></a>
-    <div class="logo" (click)="goToHome()">ngx-<span>admin</span></div>
+    <div class="logo" (click)="goToHome()">Computaci&#243;n Gr&#225;fica<span></span></div>
   </div>
   <ngx-theme-switcher [hidden]="true"></ngx-theme-switcher>
-  <ngx-layout-direction-switcher></ngx-layout-direction-switcher>
+  <ngx-layout-direction-switcher [hidden]="true"></ngx-layout-direction-switcher>
 </div>
 
 <nb-actions
