--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Light" type="primary">
+    <ngx-status-card title="Geo Location" (click)="onGeoLocationClick()" type="primary">
       <i class="nb-lightbulb"></i>
     </ngx-status-card>
   </div>
@@ -24,7 +24,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" [hidden]="true">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
     <ngx-temperature></ngx-temperature>
   </div>
@@ -34,7 +34,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" [hidden]="true">
   <div class="col-xxxl-9 col-xl-12">
     <ngx-rooms></ngx-rooms>
   </div>
