--- a/src/app/pages/maps/bubble/bubble-map.component.scss
+++ b/src/app/pages/maps/bubble/bubble-map.component.scss
@@ -1,4 +1,6 @@
 @import '../../../@theme/styles/themes';
+//@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+//@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 @include nb-install-component() {
 
