--- a/src/app/pages/maps/bubble/bubble-map.component.html
+++ b/src/app/pages/maps/bubble/bubble-map.component.html
@@ -1,21 +1,20 @@
-<mat-slider
-thumbLabel
-
-tickInterval="100"
-min="-2000"
-max="2000">
-</mat-slider>
 
 <nb-card>
   <nb-card-header>Bubble Maps</nb-card-header>
   <nb-card-body>
-    <button (click)="onClickRefresh()">Refresh</button>
     <div id="chart2" (chartInit)="onChartInit($event)" echarts [options]="options" class="echarts"></div>
     <div class="row">
+      <div class="col-md-12" style="text-align: center;">
+        <mat-form-field class="example-margin">
+          <input matInput type="number" placeholder="Year" (keyup)="onKeyUpTxt($event)" [(ngModel)]="yearValue">
+        </mat-form-field>
+      </div>
       <div class="col-md-12">
         <mat-slider
           thumbLabel
-          
+          [displayWith]="formatLabel"
+          (change)="onChangeEvent()"
+          [(ngModel)]="yearValue"
           tickInterval="100"
           min="-2000"
           max="2000">
