--- a/src/assets/deeppurple-amber.css
+++ b/src/assets/deeppurple-amber.css
@@ -133,4 +133,7 @@ mat-slider {
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
   }
   
-  
+  .mat-slider-thumb-label-text  {
+    font-size: 10px;
+    text-align: center;
+  }
