--- a/src/app/pages/maps/bubble/bubble-map.component.html
+++ b/src/app/pages/maps/bubble/bubble-map.component.html
@@ -1,6 +1,6 @@
 
 <nb-card>
-  <nb-card-header>Bubble Maps</nb-card-header>
+  <nb-card-header>Mapa de Desastres</nb-card-header>
   <nb-card-body>
     <div id="chart2" (chartInit)="onChartInit($event)" echarts [options]="options" class="echarts"></div>
     <div class="row">
