--- a/src/app/pages/maps/mapaCalor/mapaCalor.component.html
+++ b/src/app/pages/maps/mapaCalor/mapaCalor.component.html
@@ -14,8 +14,8 @@
           <label>Disaster</label>
           <br>
           <select [(ngModel)]="disasterType" (change)="onChange($event)">
-            <option value="1">Volcanes</option>
-            <option value="2">Tsunamies</option>
+            <option value="1">Tsunamies</option>
+            <option value="2">Volcans</option>
           </select>
         </div>
       </div>
