--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,28 +1,16 @@
 <div class="row">
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Geo Location" (click)="onGeoLocationClick()" type="primary">
+    <ngx-status-card title="Mapa de Desastres" (click)="onGeoLocationClick()" type="primary">
       <i class="nb-lightbulb"></i>
     </ngx-status-card>
   </div>
 
   <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Roller Shades" type="success">
+    <ngx-status-card title="Mapa Termico de Desastres" (click)="onTermoLocationClick()"  type="success">
       <i class="nb-roller-shades"></i>
     </ngx-status-card>
   </div>
 
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Wireless Audio" type="info">
-      <i class="nb-audio"></i>
-    </ngx-status-card>
-  </div>
-
-  <div class="col-xxxl-3 col-md-6">
-    <ngx-status-card title="Coffee Maker" type="warning">
-      <i class="nb-coffee-maker"></i>
-    </ngx-status-card>
-  </div>
-</div>
 
 <div class="row" [hidden]="true">
   <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
