--- a/src/app/pages/maps/mapaCalor/mapaCalor.component.html
+++ b/src/app/pages/maps/mapaCalor/mapaCalor.component.html
@@ -6,7 +6,7 @@
     <div class="row">
       <div class="col-md-6" style="text-align: center;">
         <mat-form-field class="example-margin">
-          <input matInput type="number" placeholder="Year" (keyup)="onKeyUpTxt($event)" [(ngModel)]="yearValue">
+          <input matInput type="number" placeholder="From Year" (keyup)="onKeyUpTxt($event)" [(ngModel)]="yearValue">
         </mat-form-field>
       </div>
       <div class="col-md-6" style="text-align: center;">
