--- a/src/app/pages/maps/mapaCalor/mapaCalor.component.html
+++ b/src/app/pages/maps/mapaCalor/mapaCalor.component.html
@@ -1,9 +1,8 @@
-
 <nb-card>
   <nb-card-header>Mapa Termico</nb-card-header>
   <nb-card-body>
     <div id="chartmapcalor" echarts [options]="options" class="echarts"></div>
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-md-6" style="text-align: center;">
         <mat-form-field class="example-margin">
           <input matInput type="number" placeholder="From Year" (keyup)="onKeyUpTxt($event)" [(ngModel)]="yearValue">
@@ -19,6 +18,23 @@
           </select>
         </div>
       </div>
+    </div> -->
+    <div class="row" style="padding: 10px 10px;">
+        <div class="col-md-4" style="text-align: center;">
+            <div class="form-group">
+              <label>Disaster</label>
+              <select style="height: 80px;" class="form-control" [(ngModel)]="disasterType" (change)="onChange($event)">
+                <option value="1">Tsunamies</option>
+                <option value="2">Volcans</option>
+              </select>
+            </div>
+        </div>
+        <div class="col-md-8" style="text-align: center;">
+            <div class="form-group">
+              <label>Range Years</label>  
+              <range-slider class="form-control" [min]="0" [max]="2016" [step]="1" [(ngModel)]="range" (onRangeChange)="rangeChanged($event)"></range-slider>
+            </div>
+        </div>
     </div>
   </nb-card-body>
 </nb-card>
