--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,27 +22,27 @@
   </div>
 </div>
 
-<div class="row" [hidden]="true">
+<div class="row">
   <div class="col-xxxl-9 col-xl-12">
     <ngx-rooms></ngx-rooms>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-7 col-md-6" [hidden]="false">
     <ngx-contacts></ngx-contacts>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6">
+  <div class="col-xxxl-3 col-xxl-4 col-lg-5 col-md-6" [hidden]="true">
     <ngx-solar [chartValue]="72"></ngx-solar>
 
     <ngx-kitten></ngx-kitten>
   </div>
 
-  <div class="col-xxxl-3 col-xxl-4 col-md-5">
+  <div class="col-xxxl-3 col-xxl-4 col-md-5" [hidden]="true">
     <ngx-traffic></ngx-traffic>
     <ngx-weather></ngx-weather>
   </div>
 
-  <div class="col-xxxl-6 col-xxl-12 col-md-7">
+  <div class="col-xxxl-6 col-xxl-12 col-md-7" [hidden]="true">
     <ngx-security-cameras></ngx-security-cameras>
   </div>
 </div>
