--- a/src/app/pages/maps/bubble/bubble-map.component.scss
+++ b/src/app/pages/maps/bubble/bubble-map.component.scss
@@ -12,4 +12,159 @@
     width: 100%;
     height: nb-theme(card-height-large);
   }
+
+  .progress-wrap {
+    position: relative;
+    height: 1rem;
+
+    .progress-foreground {
+      background-color: nb-theme(color-success);
+      height: 2px;
+      position: absolute;
+      left: 0;
+      margin-top: calc(0.75rem - 1px);
+      width: 100px;
+
+      @include nb-for-theme(cosmic) {
+        background-color: nb-theme(link-color);
+      }
+    }
+
+    .progress {
+      -webkit-appearance: none;
+      width: 100%;
+      background: transparent;
+      height: 1.5rem;
+      outline: none;
+      position: absolute;
+
+      @include install-thumb() {
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        background: nb-theme(color-success);
+        cursor: pointer;
+        margin-top: calc(-0.5rem + 1px);
+        border: none;
+      }
+
+      @include install-track() {
+        width: 100%;
+        height: 2px;
+        cursor: pointer;
+        background: nb-theme(separator);
+      }
+
+      @include nb-for-theme(cosmic) {
+        @include install-thumb() {
+          background: nb-theme(link-color);
+        }
+      }
+    }
+  }
+
+  .timing {
+    padding-top: 0.5rem;
+    margin: 0 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    color: nb-theme(color-fg);
+
+    .current {
+      @include nb-ltr(order, 0);
+      @include nb-rtl(order, 1);
+    }
+    .remaining {
+      @include nb-ltr(order, 1);
+      @include nb-rtl(order, 0);
+    }
+  }
+
+  .controls {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    @include nb-rtl(flex-direction, row-reverse);
+    padding: 0.25rem 2rem 1rem;
+    max-width: 400px;
+    width: 100%;
+    margin: 0 auto;
+
+    i {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+    }
+
+    .shuffle, .loop {
+      font-size: 1.5rem;
+      color: nb-theme(color-fg);
+
+      &.active {
+        color: nb-theme(color-success);
+
+        @include nb-for-theme(cosmic) {
+          color: nb-theme(link-color);
+        }
+      }
+    }
+
+    .prev, .next {
+      width: 3.5rem;
+      height: 3.5rem;
+      border: 2px solid nb-theme(separator);
+      border-radius: 50%;
+      font-size: 1.75rem;
+    }
+
+    .play {
+      font-size: 2rem;
+    }
+  }
+
+  .volume {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    position: relative;
+    max-width: 400px;
+
+    i {
+      font-size: 1.5rem;
+      margin: 0.25rem;
+      color: nb-theme(color-fg);
+    }
+
+    .progress-wrap {
+      height: 2.25rem;
+      margin: 0;
+      width: 80%;
+
+      .progress-foreground {
+        left: auto;
+        margin-top: calc(1rem + 1px);
+        z-index: 0;
+      }
+
+      .progress {
+        height: 2.25rem;
+
+        @include install-thumb() {
+          width: 1.5rem;
+          height: 1.5rem;
+          background-color: nb-theme(color-white);
+          box-shadow: 0 0.125rem 0.5rem 0 rgba(nb-theme(color-fg), 0.4);
+          border: solid 1px rgba(nb-theme(color-fg), 0.4);
+          margin-top: calc(-0.875rem + 1px);
+          position: relative;
+          z-index: 10;
+        }
+      }
+    }
+  }
+
+
+  
 }
