--- a/src/app/pages/maps/mapaCalor/mapaCalor.component.html
+++ b/src/app/pages/maps/mapaCalor/mapaCalor.component.html
@@ -12,7 +12,7 @@
     <div class="row">
         <div class="col-md-12" style="text-align: center;">
             <mat-form-field>
-                <mat-select placeholder="Disasters" [(ngModel)]="disasterType" (selectionChange)="onChange($event)">
+                <mat-select placeholder="Desastres" [(ngModel)]="disasterType" (selectionChange)="onChange($event)">
                   <mat-option *ngFor="let disaster of disasters" [value]="disaster.value">
                     {{disaster.name}}
                   </mat-option>
