--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" [hidden]="true">
   <div class="col-xxxl-9 col-xl-12">
     <ngx-rooms></ngx-rooms>
   </div>
